Fix scrolling to left issue on overflow

--- a/frontend/src/components/display/Display.css
+++ b/frontend/src/components/display/Display.css
@@ -2,13 +2,22 @@
     min-width: 650px;
     width: 100%;
     position: relative;
-    overflow-y: auto;
-    overflow: auto;
     background-color: #FFFFFF;
-    height: 250px;
+    height: 300px;
     border-top: 2px solid #e5e5e5;
     padding-top: 20px;
+    overflow: auto;
 }
+
+.displayHelper{
+    min-height: min-content; /* needs vendor prefixes */
+    min-width: min-content;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+
 
 .greyCover{
     width: 100%;
